@@ -1,3 +1,8 @@
+2009-10-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Added missing bitfield.cc
+	* src/bitfield.cc
+
 2009-10-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Renamed Util.{cc,h} as util.{cc,h}
